# layon

./: pyproject.toml  tox.ini
.github/workflows/: ci.yml
ETL/playground/: test.ipynb
ETL/requirements/: dev.txt
ETL/src/utils/: loglib.py
etl/: pyproject.toml
gateway/: pyproject.toml
shared/: README.md  loglib.py  pyproject.toml
web/: Dockerfile  docker-entrypoint.sh  pyproject.toml
web/templates/: index.html
